# skills-runtime

./: .env.example  .gitignore  LICENSE  README.md  main.py  push-to-github.sh  pyproject.toml  requirements.txt
app/: agent.py  conf.py  prompt.py  skill_loader.py  skills_types.py  tools.py
skills/hello-skills/: SKILL.md
skills/test-skill/: SKILL.md
